syntax = "proto3";
package admin;

service AdminService {
    rpc CreateCondo(CreateCondoRequest) returns (CreateCondoResponse);
    rpc CreateAccessCode(CreateAccessCodeRequest) returns (CreateAccessCodeResponse);
}

message OfficeHour {
    string day = 1;
    string from = 2;
    string to = 3;
}

message Condo {
    string id = 1;
    string address = 2;
    string name = 3;
    repeated OfficeHour office_hours = 4;
    string phone_number = 5;
    string email = 6;
    string owner = 7;
}

message CreateCondoRequest {
    string address = 2;
    string name = 3;
    repeated OfficeHour office_hours = 4;
    string phone_number = 5;
    string email = 6;
    string owner = 7;
}

message CreateCondoResponse {
    Condo condo = 1;
}

message CreateAccessCodeRequest {
    string condo_id = 1;
}

message CreateAccessCodeResponse {
    string access_code = 1;
}
