syntax = "proto3";
package auth;

service AuthService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}

message User {
    string id = 1;
    string condo_id = 2;
    string first_name = 3;
    string last_name = 4;
    string password = 5;
    string phone_number = 6;
    int64 unit = 7;
    string email = 8;
}

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone_number = 4;
    string password = 5;
    string condo_access_code = 6;
}

message CreateUserResponse {
    User user = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
}
